# jacket-status-cache

./: .gitignore  README.md  setup.cfg
jacketstatuscache/: jacketcache.py  power_state.py  test.py  vcloudsynchronizer.py
patches/: driver.py  vcloud_client.py
