[metadata]
name = jacket-status-cache
version = 0.2
summary = Hybrid Cloud Jacket Status Cache
description-file =
    README.md

author = back1860

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    jacketstatuscache

[install]
prefix=/
install-purelib=/usr/lib64/python2.6/site-packages/
